Updated Cookie Banner Styles (Bug Fix)
I'm trying to keep the font size at 10 px at all times in iPhone 5 screens to prevent a bug in which the text becomes too large if the user changes from horizontal mode to vertical mode.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1151,6 +1151,14 @@ padding bottom or top */
   @media only screen and (max-height: $iphone5-max-height-horizontal) {
     font-size: 10px;
   }
+
+  /* I will also put that same font size in iPhone 5 screens in vertical mode to try to prevent 
+  a bug in which, if the user goes from vertical mode to horizontal mode, and the naback to vertical 
+  mode, the text becomes too large, so the cookie banner occupies the whole screen, and the "terms"
+  link is not visible.*/
+  @media only screen and (max-width: $iphone5-max-height-horizontal) {
+    font-size: 10px;
+  }
 }
 
 .cookie-container a {
